{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 24,
  "lineage": "02abe630-26b8-711c-2ea7-1d8ae1e727a5",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd4b482eeb1c0614",
            "arn": "arn:aws:ec2:us-east-1:238611949808:elastic-ip/eipalloc-0bd4b482eeb1c0614",
            "domain": "vpc",
            "id": "eipalloc-0bd4b482eeb1c0614",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-205-159-132.compute-1.amazonaws.com",
            "public_ip": "54.205.159.132",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238611949808:internet-gateway/igw-099c2fad656aaaa2a",
            "id": "igw-099c2fad656aaaa2a",
            "owner_id": "238611949808",
            "tags": {
              "Name": "lesson-5-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-igw"
            },
            "vpc_id": "vpc-0384ddf2a21d2e9ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd4b482eeb1c0614",
            "association_id": "eipassoc-02d63dda083c59412",
            "connectivity_type": "public",
            "id": "nat-06dfa68987ea89283",
            "network_interface_id": "eni-0f3352f0c7c5b94df",
            "private_ip": "10.0.1.130",
            "public_ip": "54.205.159.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-034429b803d20bb31",
            "tags": {
              "Name": "lesson-5-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238611949808:route-table/rtb-07e93f32a8bc56534",
            "id": "rtb-07e93f32a8bc56534",
            "owner_id": "238611949808",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06dfa68987ea89283",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384ddf2a21d2e9ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238611949808:route-table/rtb-0670755b15b4164da",
            "id": "rtb-0670755b15b4164da",
            "owner_id": "238611949808",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-099c2fad656aaaa2a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0384ddf2a21d2e9ff"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9cf16ae4ab7414d",
            "route_table_id": "rtb-07e93f32a8bc56534",
            "subnet_id": "subnet-0be6c51f6afafd967"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cb7cb51ee9565fe",
            "route_table_id": "rtb-07e93f32a8bc56534",
            "subnet_id": "subnet-048b8303660c5040e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075627231643954b8",
            "route_table_id": "rtb-07e93f32a8bc56534",
            "subnet_id": "subnet-01b1a43adca978cb7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa95aee20aeb93b2",
            "route_table_id": "rtb-0670755b15b4164da",
            "subnet_id": "subnet-034429b803d20bb31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cca9bc9bdd1285e4",
            "route_table_id": "rtb-0670755b15b4164da",
            "subnet_id": "subnet-0d761ac60fd038c89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca453684fb0e6eb2",
            "route_table_id": "rtb-0670755b15b4164da",
            "subnet_id": "subnet-04d0232bb763dc5d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238611949808:subnet/subnet-0be6c51f6afafd967",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be6c51f6afafd967",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238611949808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0384ddf2a21d2e9ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238611949808:subnet/subnet-048b8303660c5040e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048b8303660c5040e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238611949808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-0384ddf2a21d2e9ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238611949808:subnet/subnet-01b1a43adca978cb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b1a43adca978cb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238611949808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-subnet-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-subnet-3"
            },
            "vpc_id": "vpc-0384ddf2a21d2e9ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238611949808:subnet/subnet-034429b803d20bb31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034429b803d20bb31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238611949808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0384ddf2a21d2e9ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238611949808:subnet/subnet-0d761ac60fd038c89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d761ac60fd038c89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238611949808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-0384ddf2a21d2e9ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238611949808:subnet/subnet-04d0232bb763dc5d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d0232bb763dc5d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238611949808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-subnet-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-subnet-3"
            },
            "vpc_id": "vpc-0384ddf2a21d2e9ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238611949808:vpc/vpc-0384ddf2a21d2e9ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008aceabc399a48c7",
            "default_route_table_id": "rtb-053b88aea57f3eec3",
            "default_security_group_id": "sg-00e938b1f91504af9",
            "dhcp_options_id": "dopt-07c417c657a905120",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0384ddf2a21d2e9ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053b88aea57f3eec3",
            "owner_id": "238611949808",
            "tags": {
              "Name": "lesson-5-vpc"
            },
            "tags_all": {
              "Name": "lesson-5-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}